<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="?attr/colorWhiteBackground">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_header"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="8%"
        android:background="?attr/colorWhiteBackground">

        <ImageView
            android:id="@+id/imageView_applogo_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="90%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginRightPercent="1%"
            app:layout_marginTopPercent="5%"/>

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:textColor="?attr/colorSecondaryContents"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView_applogo_small"
            android:layout_alignBottom="@id/imageView_applogo_small"
            android:text="TextView"
            android:textSize="26dp"
            app:layout_marginLeftPercent="1%"
            app:layout_marginRightPercent="1%"
            app:layout_marginTopPercent="5%"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:background="@drawable/backgournd_border"
            android:layout_alignParentBottom="true"
            app:layout_heightPercent="3%"/>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_body"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="84%"
        android:layout_below="@+id/layout_header"
        android:background="?attr/colorWhiteBackground">

        <TextView
            android:id="@+id/textView_create_account_subtitle"
            android:layout_width="wrap_content"
            android:textColor="?attr/colorSecondaryContents"
            android:layout_height="wrap_content"
            android:text="@string/createAccount_subtitle"
            android:textAlignment="center"
            android:autoSizeTextType="uniform"
            android:layout_centerHorizontal="true"
            app:layout_widthPercent="60%"
            app:layout_heightPercent="8%"
            app:layout_marginTopPercent="3%"/>

        <TextView
            android:id="@+id/textView_create_account_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondaryContents"
            android:layout_below="@+id/textView_create_account_subtitle"
            android:text="@string/createAccount_username_label"
            android:autoSizeTextType="uniform"
            app:layout_marginTopPercent="12%"
            app:layout_marginLeftPercent="5%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="3%"/>

        <TextView
            android:id="@+id/textView_create_account_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_create_account_username_label"
            android:textColor="?attr/colorSecondaryContents"
            android:text="@string/createAccount_password_label"
            android:autoSizeTextType="uniform"
            android:layout_alignLeft="@+id/textView_create_account_username_label"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="3%"/>

        <TextView
            android:id="@+id/textView_create_account_re_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_create_account_password_label"
            android:text="@string/createAccount_re_password_label"
            android:textColor="?attr/colorSecondaryContents"
            android:autoSizeTextType="uniform"
            android:layout_alignLeft="@+id/textView_create_account_username_label"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="3%"/>

        <TextView
            android:id="@+id/textView_create_account_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_create_account_re_password_label"
            android:text="@string/createAccount_email_label"
            android:textColor="?attr/colorSecondaryContents"
            android:autoSizeTextType="uniform"
            android:layout_alignLeft="@+id/textView_create_account_username_label"
            app:layout_marginTopPercent="7%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="3%"/>

        <EditText
            android:background="@drawable/backgournd_border"
            android:id="@+id/editText_create_account_username_input"
            android:textColor="?attr/colorPrimaryContents"
            android:layout_width="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_below="@id/textView_create_account_subtitle"
            android:layout_toRightOf="@+id/textView_create_account_username_label"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="16dp"
            app:layout_marginTopPercent="8.5%"
            app:layout_marginLeftPercent="5%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="8%"/>

        <EditText
            android:background="@drawable/backgournd_border"
            android:id="@+id/editText_create_account_password_input"
            android:layout_width="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="?attr/colorPrimaryContents"
            android:layout_below="@id/editText_create_account_username_input"
            android:layout_toRightOf="@+id/textView_create_account_password_label"
            android:autoSizeTextType="uniform"
            app:layout_marginTopPercent="2%"
            app:layout_marginLeftPercent="5%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="8%"/>

        <EditText
            android:background="@drawable/backgournd_border"
            android:id="@+id/editText_create_account_re_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:inputType="textPassword"
            android:layout_below="@id/editText_create_account_password_input"
            android:layout_toRightOf="@+id/textView_create_account_re_password_label"
            android:autoSizeTextType="uniform"
            android:textColor="?attr/colorPrimaryContents"
            app:layout_marginTopPercent="2%"
            app:layout_marginLeftPercent="5%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="8%"/>

        <EditText
            android:background="@drawable/backgournd_border"
            android:id="@+id/editText_create_account_email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:ems="10"
            android:layout_below="@id/editText_create_account_re_password_input"
            android:layout_toRightOf="@+id/textView_create_account_email_label"
            android:autoSizeTextType="uniform"
            app:layout_marginTopPercent="2%"
            android:autoSizeMaxTextSize="16dp"
            android:textColor="?attr/colorPrimaryContents"
            app:layout_marginLeftPercent="5%"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="8%"/>

        <CheckBox
            android:id="@+id/checkBox_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount_aggree_policies"
            android:textColor="?attr/colorAgreement"
            android:button="@drawable/check_box"
            android:layout_below="@id/textView_create_account_subtitle"
            android:layout_centerHorizontal="true"
            app:layout_marginTopPercent="50%"/>

        <Button
            android:textAllCaps="false"
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgournd_border"
            android:text="@string/createAccount_submit"
            android:layout_below="@+id/textView_create_account_subtitle"
            android:textColor="?attr/colorPrimaryContents"
            android:layout_centerHorizontal="true"
            app:layout_marginTopPercent="60%"
            app:layout_heightPercent="8%"
            android:onClick="onClickSubmit"
            app:layout_widthPercent="30%"/>
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>