<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="?attr/colorWhiteBackground">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_header"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="8%"
        android:background="?attr/colorWhiteBackground">

        <ImageView
            android:id="@+id/imageView_applogo_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="90%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginRightPercent="1%"
            app:layout_marginTopPercent="5%"/>

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView_applogo_small"
            android:layout_alignBottom="@id/imageView_applogo_small"
            android:textColor="?attr/colorSecondaryContents"
            android:text="TextView"
            android:textSize="26dp"
            app:layout_marginLeftPercent="1%"
            app:layout_marginRightPercent="1%"
            app:layout_marginTopPercent="5%"/>
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:background="@drawable/backgournd_border"
            android:layout_alignParentBottom="true"
            app:layout_heightPercent="3%"/>

    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_body"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="84%"
        android:layout_below="@+id/layout_header"
        android:background="?attr/colorGreyBackground">

        <ImageView
            android:id="@+id/imageView_ads"
            android:layout_width="match_parent"
            app:layout_heightPercent="35%"
            app:layout_widthPercent="100%"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/textView_home_subtitle_courses"
            android:textColor="?attr/colorPrimaryContents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_subtitle_course"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            app:layout_widthPercent="50%"
            app:layout_heightPercent="8%"
            app:layout_marginTopPercent="37%"/>
        <Button
            android:onClick="searchCourse"
            android:id="@+id/button1"
            android:textColor="?attr/colorButtonOnHome"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_acedemic"
            android:background="@drawable/button_radius_blue"
            android:layout_below="@+id/textView_home_subtitle_courses"
            app:layout_widthPercent="27.5%"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="15%"
            app:layout_marginTopPercent="2%"/>

        <Button
            android:onClick="searchCourse"
            android:id="@+id/button2"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_sport"
            android:textColor="?attr/colorButtonOnHome"
            android:background="@drawable/button_radius_yellow"
            android:layout_alignTop="@id/button1"
            android:layout_toRightOf="@id/button1"
            app:layout_widthPercent="27.5%"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="15%"/>

        <Button
            android:onClick="searchCourse"
            android:id="@+id/button3"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_music"
            android:textColor="?attr/colorButtonOnHome"
            android:background="@drawable/button_radius_orange"
            android:layout_below="@+id/button1"
            app:layout_widthPercent="27.5%"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="15%"
            app:layout_marginTopPercent="2%"/>

        <Button
            android:onClick="searchCourse"
            android:id="@+id/button4"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:textColor="?attr/colorButtonOnHome"
            android:layout_height="wrap_content"
            android:text="Computing"
            android:background="@drawable/button_radius_light_blue"
            android:layout_alignTop="@id/button3"
            android:layout_toRightOf="@id/button3"
            app:layout_widthPercent="27.5%"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="15%"/>
        <Button
            android:onClick="searchCourse"
            android:id="@+id/button5"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Art"
            android:background="@drawable/button_radius_green"
            android:layout_below="@+id/button3"
            android:textColor="?attr/colorButtonOnHome"
            app:layout_widthPercent="27.5%"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="15%"
            app:layout_marginTopPercent="2%"/>

        <Button
            android:onClick="searchCourse"
            android:id="@+id/button6"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_other"
            android:background="@drawable/button_radius_grey"
            android:layout_alignTop="@id/button5"
            android:textColor="?attr/colorButtonOnHome"
            android:layout_toRightOf="@id/button5"
            app:layout_widthPercent="27.5%"
            app:layout_heightPercent="8%"
            app:layout_marginLeftPercent="15%"/>



        <TextView
            android:id="@+id/textView_home_subtitle_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_subtitle_post"
            android:textColor="?attr/colorSecondaryContents"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:layout_below="@+id/button6"
            android:layout_centerHorizontal="true"
            app:layout_widthPercent="60%"
            app:layout_heightPercent="5%"
            app:layout_marginTopPercent="4%"/>
        <Button
            android:id="@+id/button_home_post"
            android:onClick="onClickPost"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_home_subtitle_post"
            android:text="Post"
            android:background="@drawable/button_radius_light_blue"
            android:layout_centerHorizontal="true"
            app:layout_heightPercent="8%"
            android:textColor="?attr/colorButtonOnHome"
            app:layout_marginLeftPercent="15%"
            app:layout_widthPercent="27.5%"
            app:layout_marginTopPercent="2%"/>

    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="8%"
        android:layout_below="@+id/layout_body"
        android:background="?attr/colorWhiteBackground">

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:background="@drawable/backgournd_border"
            android:layout_alignParentTop="true"
            app:layout_heightPercent="3%"/>

        <ImageView
            android:id="@+id/imageView_nav_home"
            android:onClick="onClickHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="?attr/colorPrimaryContents"
            app:layout_marginTopPercent="8%"
            app:layout_marginLeftPercent="6%"
            app:layout_widthPercent="17.5%"
            app:layout_heightPercent="60%"/>
        <ImageView
            android:id="@+id/imageView_nav_post"
            android:onClick="onClickPost"
            android:layout_width="wrap_content"
            android:tint="?attr/colorPrimaryContents"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView_nav_home"
            app:layout_marginLeftPercent="7%"
            app:layout_marginTopPercent="8%"
            app:layout_widthPercent="17.5%"
            app:layout_heightPercent="60%"/>
        <ImageView
            android:id="@+id/imageView_nav_course"
            android:onClick="onClickCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView_nav_post"
            app:layout_marginLeftPercent="5%"
            app:layout_marginTopPercent="8%"
            android:tint="?attr/colorPrimaryContents"
            app:layout_widthPercent="17.5%"
            app:layout_heightPercent="60%"/>
        <ImageView
            android:id="@+id/imageView_nav_me"
            android:onClick="onClickMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="?attr/colorPrimaryContents"
            android:layout_toRightOf="@+id/imageView_nav_course"
            app:layout_marginLeftPercent="6%"
            app:layout_marginTopPercent="8%"
            app:layout_widthPercent="17.5%"
            app:layout_heightPercent="60%"/>

        <TextView
            android:id="@+id/textView_nav_home"
            android:onClick="onClickHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_nav_home"
            android:text="Home"
            android:autoSizeTextType="uniform"
            android:textColor="?attr/colorSecondaryContents"
            android:textAlignment="center"
            app:layout_marginLeftPercent="6%"
            app:layout_widthPercent="17.5%"
            app:layout_heightPercent="30%"/>

        <TextView
            android:id="@+id/textView_nav_post"
            android:onClick="onClickPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_nav_post"
            android:layout_toRightOf="@+id/textView_nav_home"
            android:text="Post"
            android:textColor="?attr/colorSecondaryContents"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            app:layout_marginLeftPercent="6%"
            app:layout_widthPercent="17.5%"
            app:layout_heightPercent="30%"/>

        <TextView
            android:id="@+id/textView_nav_course"
            android:onClick="onClickCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_nav_course"
            android:layout_toRightOf="@+id/textView_nav_post"
            android:textColor="?attr/colorSecondaryContents"
            android:autoSizeTextType="uniform"
            android:text="Course"
            android:textAlignment="center"
            app:layout_heightPercent="30%"
            app:layout_marginLeftPercent="6%"
            app:layout_widthPercent="17.5%" />

        <TextView
            android:id="@+id/textView_nav_me"
            android:onClick="onClickMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_nav_me"
            android:layout_toRightOf="@+id/textView_nav_course"
            android:textColor="?attr/colorSecondaryContents"
            android:autoSizeTextType="uniform"
            android:text="Me"
            android:textAlignment="center"
            app:layout_heightPercent="30%"
            app:layout_marginLeftPercent="6%"
            app:layout_widthPercent="17.5%" />

    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>